Minor fix to align with the changes I made on the html and script.js file

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
 /* Hero image */
 /* Image was linked from: https://www.cntraveller.com/article/amber-list-countries */
 .hero-image {
-  background: url("https://tr-images.condecdn.net/image/bGlEbAPOBzA/crop/1440/f/fig-tree-bay-cyprus-gettyimages-1070188472.jpg") no-repeat center;
+  background: url("https://i2.wp.com/handluggageonly.co.uk/wp-content/uploads/2017/05/seychelles-1415432.jpg") no-repeat center;
   background-size: cover;
   width: 100%;
   height: 500px;
@@ -39,8 +39,8 @@ body {
   position: relative;
 }
 .btn {
-  background-color: #f1f1f1;
-  border: 1px solid silver;
+  background-color: white;
+  border: 1px solid orangered;
   color: black;
   padding: 10px 20px;
   text-align: center;
@@ -138,7 +138,7 @@ div#map {min-height: 360px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   padding: 16px;
   text-align: center;
-  background-color:aliceblue;
+  background-color:white;
   cursor: pointer;
   width: 100%;
   position: relative;
